test/files/neg/literate_existentials.check
literate_existentials.scala:189: error: Cannot prove that Int <:< M forSome { type M <: String }.
  implicitly[Int <:< (M forSome { type M >: Nothing <: String })] // fails
            ^
one error found
